@@ -5,7 +5,8 @@ Changelog
 1.0.6 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix error when portrait is stored as Pdata object.
+  [jone]
 
 
 1.0.5 (2015-01-09)
